    even languages with complex scripts are displayed (LP: #202291).
  * Run fontconfig-voodoo as root (LP: #203086).

  [ Luke Yelavich ]
  * bin/ubiquity-dm: Set the GTK_MODULES environment variable only when
    at-spi-registryd is loaded.

  [ Mario Limonciello ]
  * Set proper path to change permissions of vnc files.  (LP: #204985)
  * Use newer nvidia syntax in xorg.conf.

 -- Luke Yelavich <luke.yelavich@canonical.com>  Tue, 18 Mar 2008 18:46:11 +1100

ubiquity (1.8.0) hardy; urgency=low

  * Disable the intro message in preparation for Ubuntu 8.04 beta.
  * Run ubiquity under hal-lock if possible (LP: #199129).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 19 Mar 2008 15:49:26 +0000

ubiquity (1.7.18) hardy; urgency=low

  [ Jonathan Riddell ]
  * kde_ui:
   - Enable/disable advanced partitioner buttons, don't hide/show
   - Use Oxygen icon and make it findable by KDE 4
   - Fix reboot dialogue to actually offer a reboot option
   - When clicking Back at AdvancedPartitioner, go back to first Partitioner page, not keyboard

  [ Evan Dandrea ]
  * Move cancelButton.hide() to after setCancelButton in the KDE frontend as
    the latter function causes the button to be shown again.
  * Use a black border around tzmap points to assist the visually impaired.
  * Flash the currently selected location on the tzmap so that it's easier to
    spot.
  * When clicking on the tzmap, if the closest match is already selected, take
    the next closest.
  * Place the tzmap in an AspectFrame so it doesn't look distorted on
    widescreen displays (LP: #200152).
  * Add missing signal import in noninteractive frontend.
  * Automatic update of included source packages: clock-setup
    0.92ubuntu2, grub-installer 1.27ubuntu6, partman-auto 73ubuntu5,
    partman-target 54ubuntu4.
  * UI Freeze exception upload (LP: #201788).

  [ Mario Limonciello ]
  * For PVR-350 output support, use ivtvfb not ivtv-fb.

 -- Evan Dandrea <evand@ubuntu.com>  Thu, 13 Mar 2008 13:37:14 -0400
