@@ -28,6 +28,10 @@ ubiquity (1.8.1) UNRELEASED; urgency=low
   * Set proper path to change permissions of vnc files.  (LP: #204985)
   * Use newer nvidia syntax in xorg.conf.
 
+  [ Jonathan Riddell ]
+  * kde_ui changes for UBIQUITY_ONLY mode, don't offer a no-reboot method at
+    end of install, and hide minimise button on window frame.
+	
  -- Luke Yelavich <luke.yelavich@canonical.com>  Tue, 18 Mar 2008 18:46:11 +1100
 
 ubiquity (1.8.0) hardy; urgency=low
